1589 kill driver on linux